Convert the benchmark to use the new tornado panama types